Fix/network entity class names (#256)
Fix sidebar contents not showing in Firefox

- renamed network entity css components to figure-*
- applied new network entity component names to homepage
- improved markup on homepage
- replaced new network entity class names to example page and sidebar

Fixes #246 
Fixes #248

--- a/app/styles/general/network.scss
+++ b/app/styles/general/network.scss
@@ -27,17 +27,17 @@
   background: $text-color;
   vertical-align: middle;
 }
-.procurer,
-.supplier {
+.figure-procurer,
+.figure-supplier {
   @include network-entity(1em);
 }
-.procurer {
+.figure-procurer {
   background: $color-procurer;
 }
-.supplier {
+.figure-supplier {
   background: $color-supplier;
 }
-.relationship {
+.figure-relationship {
   position: relative;
   top: .25em;
   z-index: 0;
